csv uploaded to git

--- a/Data 602 - Advanced Programming Techniques - Final Project.ipynb
+++ b/Data 602 - Advanced Programming Techniques - Final Project.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 698,
    "metadata": {
     "collapsed": false,
     "nbpresent": {
@@ -337,13 +337,13 @@
        "22  Does the Total claim amount impact campaign response. Is there a pattern to find here?. We will try binning this variable to see if we can get more predictive power. We will look at the frequency distribution / histograms and correlation to response to see if this is a variable worth considering.                  "
       ]
      },
-     "execution_count": 284,
+     "execution_count": 698,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "file = \"D:/CUNY/Courses/Data 602 - Advanced Programming Techniques/Assignments/Project1_desc.csv\"\n",
+    "file = \"https://raw.githubusercontent.com/kishkp/Data-602-Advanced-Programming-Techniques/master/Project1_desc.csv\"\n",
     "df = pd.read_csv(file)\n",
     "df"
    ]
@@ -363,13 +363,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 699,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "file = \"D:/CUNY/Courses/Data 602 - Advanced Programming Techniques/Assignments/WA_Fn-UseC_-Marketing-Customer-Value-Analysis.csv\"\n",
+    "file = \"https://raw.githubusercontent.com/kishkp/Data-602-Advanced-Programming-Techniques/master/WA_Fn-UseC_-Marketing-Customer-Value-Analysis.csv\"\n",
     "data = pd.read_csv(file)\n",
     "data.columns = ['Customer','State','CustomerLifetimeValue','Response','Coverage','Education','EffectiveToDate','EmploymentStatus',\n",
     "'Gender','Income','LocationCode','MaritalStatus', 'MonthlyPremiumAuto','MonthsSinceLastClaim', 'MonthsSincePolicyInception','NumberofOpenComplaints',\n",
